gcc/testsuite/gcc.dg/spellcheck-options-18.c
/* { dg-do compile } */
/* { dg-options "-fprofile-update" } */
/* { dg-error "unrecognized command-line option '-fprofile-update'; did you mean '-fprofile-update='?"  "" { target *-*-* } 0 } */
